Task 1.2 done